hard-gists/7f46e790c9e342d75dcbd9b1deb9d940/run.log
=== Docker Run Log for 7f46e790c9e342d75dcbd9b1deb9d940 ===
Started at: Mi 29. Okt 17:35:20 CET 2025

[2025-10-29 17:35:21] START: Running container for 7f46e790c9e342d75dcbd9b1deb9d940
[2025-10-29 17:35:21] SUCCESS: Container 93b11dad9b4ff18abbda4517869c4939605c02654cb4cfc281a6c7e4fef457bd started for 7f46e790c9e342d75dcbd9b1deb9d940
=== Container logs for 7f46e790c9e342d75dcbd9b1deb9d940 ===
  File "/snippet.py", line 105
    print probs.shape,probs.mean()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7f46e790c9e342d75dcbd9b1deb9d940 ===
[2025-10-29 17:35:23] INFO: Container 93b11dad9b4ff18abbda4517869c4939605c02654cb4cfc281a6c7e4fef457bd has stopped
